# hybrid-logarithmic-cache

./: README.md  benchmark_baselines.py  benchmark_e2e.py  checkpoint_cache.py  diagnose_oom.py  plan.md  plot_flops_cache.py  pyproject.toml  runall.sh
conf/: .medium.yaml.swp  .paretto_system_prompts_interleaved.yaml.swp  colossal.yaml  config.yaml  config_27b.yaml  e2e_narrativeqa.yaml  e2e_quality.yaml  e2e_system_prompts.yaml  large.yaml  medium.yaml  paretto.yaml  paretto_narrativeqa.yaml  paretto_quality.yaml  paretto_quality_interleaved.yaml  paretto_system_prompts.yaml  paretto_system_prompts_interleaved.yaml  smoke.yaml  sweep_best.yaml  sweep_cache.yaml  sweep_gamma.yaml  sweep_nblocks.yaml  sweep_online.yaml  toy.yaml  toy_gitproject.yaml
conf/data/: base.yaml  git_project.yaml  github.yaml  narrativeqa.yaml  osst1.yaml  squad.yaml  system_prompts.yaml  wikipedia.yaml
conf/strategy/: .base.yaml.swp  balanced.yaml  base.yaml  block.yaml  hist_exp_decay.yaml  hist_frozen.yaml  hist_periodic.yaml  kv_only.yaml  log.yaml  sqrt.yaml
hybrid_logarithmic_cache/: utils.py
hybrid_logarithmic_caching/: checkpoint_cache.py
scripts/: .plot_results.py.swp  benchmark_e2e.py  benchmark_single.py  plot_results.py  prepare_data.py
simulation/: README.md  sparse_prefix_caching_sim.py
simulation/tests/: test_trace_cache_sim.py
simulation/trace_cache_sim/: __init__.py  dp_opt.py  experiments.py  policies.py  simulator.py  toy_recurrence.py  traces.py
sparse_prefix_caching/: patches.py
spase_cache/: checkpoint_cache.py  strategies.py  utils.py
(+8 files in other folders)
